default/objects/CampaignMember/fields/Accountname__c.field-meta.xml
<CustomField>
    <fullName>Accountname__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Kampagnenmitglieder</relationshipLabel>
    <relationshipName>Kampagnenmitglieder</relationshipName>
    <type>Lookup</type>
</CustomField>