default/objects/CampaignMember/fields/Dialler_Priority__c.field-meta.xml
<CustomField>
    <fullName>Dialler_Priority__c</fullName>
    <formula>IF( LeadPriority__c =0, OppPriority__c,LeadPriority__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dialler Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>