default/objects/CampaignMember/fields/LeadPriority__c.field-meta.xml
<CustomField>
    <fullName>LeadPriority__c</fullName>
    <formula>Lead.NVM_Lead_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeadPriority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>