default/objects/CampaignMember/fields/NVM_Phone__c.field-meta.xml
<CustomField>
    <fullName>NVM_Phone__c</fullName>
    <label>NVM Phone</label>
    <type>Phone</type>
</CustomField>