default/objects/CampaignMember/fields/Opp_Phone__c.field-meta.xml
<CustomField>
    <fullName>Opp_Phone__c</fullName>
    <formula>Opportunity__r.Primary_Contact_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Phone</label>
    <type>Text</type>
</CustomField>