default/objects/CampaignMember/fields/OppPriority__c.field-meta.xml
<CustomField>
    <fullName>OppPriority__c</fullName>
    <formula>Opportunity__r.NVM_Opp_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OppPriority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>